--- a/index.html
+++ b/index.html
@@ -134,16 +134,18 @@
 					<p>Need to get in touch to collaborate on a project or for anything else? Drop me a line!</p>
 					<div class="row">
 						<div class="8u 12u$(small)">
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/elsayedm@uwindsor.ca">
 								<div class="row uniform 50%">
 									<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-									<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+									<div class="6u$ 12u$(xsmall)"><input type="email" name="_replyto" id="email" placeholder="Email" /></div>
 									<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 								</div>
+								<br/>
+								<ul class="actions">
+									<li><input type="submit" value="Send" /></li>
+								</ul>
 							</form>
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
+							
 						</div>
 						<div class="4u$ 12u$(small)">
 							<ul class="labeled-icons">
